# trash_alert

./: .gitignore  main.py  pyproject.toml  requirements.txt
src/backend/database/: db_queries.py  model.py
